@@ -16,6 +16,7 @@
 import json
 import mock
 
+from gerritclient.common import utils
 from gerritclient.tests.unit.cli import clibase
 from gerritclient.tests.utils import fake_project
 from gerritclient.tests.utils import fake_tag
@@ -581,3 +582,54 @@ Garbage collection completed successfully.""")
 
         self.m_get_client.assert_called_once_with('project', mock.ANY)
         self.m_client.delete_tag.assert_called_once_with(project_name, tags)
+
+    @mock.patch('json.dump')
+    def test_project_configuration_download_json(self, m_dump):
+        project_name = 'fake/fake-project'
+        file_format = 'json'
+        directory = '/tmp'
+        test_data = fake_project.get_fake_config(name=project_name)
+        args = 'project configuration download {0} -f {1} -d {2}'.format(
+            project_name, file_format, directory)
+        expected_path = '{directory}/{project_name}.{file_format}'.format(
+            directory=directory,
+            project_name=utils.normalize(project_name),
+            file_format=file_format)
+
+        self.m_client.get_config.return_value = test_data
+
+        m_open = mock.mock_open()
+        with mock.patch('gerritclient.commands.project.open',
+                        m_open, create=True):
+            self.exec_command(args)
+
+        m_open.assert_called_once_with(expected_path, 'w')
+        m_dump.assert_called_once_with(test_data, mock.ANY, indent=4)
+        self.m_get_client.assert_called_once_with('project', mock.ANY)
+        self.m_client.get_config.assert_called_once_with(project_name)
+
+    @mock.patch('yaml.safe_dump')
+    def test_project_configuration_download_yaml(self, m_safe_dump):
+        project_name = 'fake/fake-project'
+        file_format = 'yaml'
+        directory = '/tmp'
+        test_data = fake_project.get_fake_config(name=project_name)
+        args = 'project configuration download {0} -f {1} -d {2}'.format(
+            project_name, file_format, directory)
+        expected_path = '{directory}/{project_name}.{file_format}'.format(
+            directory=directory,
+            project_name=utils.normalize(project_name),
+            file_format=file_format)
+
+        self.m_client.get_config.return_value = test_data
+
+        m_open = mock.mock_open()
+        with mock.patch('gerritclient.commands.project.open',
+                        m_open, create=True):
+            self.exec_command(args)
+
+        m_open.assert_called_once_with(expected_path, 'w')
+        m_safe_dump.assert_called_once_with(test_data, mock.ANY,
+                                            default_flow_style=False)
+        self.m_get_client.assert_called_once_with('project', mock.ANY)
+        self.m_client.get_config.assert_called_once_with(project_name)
